[package]
name = "mat-clockwork-utils"
version = "2.0.5"
description = "Tools for building blocks on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/mat-clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "mat_clockwork_utils"

[dependencies]
anchor-lang = "0.27.0"
base64 = "~0.13"
static-pubkey = "1.0.3"

