[package]
name = "mat-clockwork-thread-program"
version = "2.6.0"
description = "Clockwork thread program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/mat-clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mat_clockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
mat-clockwork-cron = { path = "../../cron", version = "=2.6.0" }
mat-clockwork-network-program = { path = "../network", features = ["cpi"], version = "=2.6.0" }
mat-clockwork-thread-program-v1 = { path = "v1", version = "=1.15.0" }
mat-clockwork-utils = { path = "../../utils", version = "=2.6.0" }
static-pubkey = "1.0.3"
version = "3.0.0"
