[package]
name = "mat-clockwork-thread-program"
version = "5.9.0"
description = "Clockwork thread program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-cron = { package = "mat-clockwork-cron", path = "../../cron", version = "5.9.0" }
clockwork-network-program = { package = "mat-clockwork-network-program", path = "../network", features = ["cpi"], version = "5.9.0" }
clockwork-thread-program-v1 = { package = "mat-clockwork-thread-program-v1", path = "v1", version = "5.9.0" }
clockwork-utils = { package = "mat-clockwork-utils", path = "../../utils", version = "5.9.0" }
static-pubkey = "1.0.3"
version = "3.0.0"
