[package]
name = "mat-clockwork-webhook-program"
version = "2.7.0"
description = "Clockwork webhook program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/mat-clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mat_clockwork_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.27.0" }
mat-clockwork-network-program = { path = "../network", features = ["cpi"], version = "2.7.0" }
mat-clockwork-utils = { path = "../../utils", version = "2.7.0" }
serde = "1.0.152"
