[package]
name = "mat-clockwork-webhook-program"
version = "5.9.0"
description = "Clockwork webhook program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.27.0" }
clockwork-network-program = { package = "mat-clockwork-network-program", path = "../network", features = ["cpi"], version = "5.9.0" }
clockwork-utils = { package = "mat-clockwork-utils", path = "../../utils", version = "5.9.0" }
serde = "1.0.152"
