[package]
name = "publish-helper"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cargo-bump-version"
path = "src/bin/bump-version/main.rs"

[[bin]]
name = "cargo-publish-workspace"
path = "src/bin/publish-workspace/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
indexmap = "1.7"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.7.3"
